--- a/front/package.json
+++ b/front/package.json
@@ -8,8 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apexcharts": "^3.8.6",
+    "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.2",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-apexcharts": "^1.5.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
