--- a/front/package.json
+++ b/front/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "apexcharts": "^3.8.6",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.2",
     "core-js": "^2.6.5",
+    "cors": "^2.8.5",
     "vue": "^2.6.10",
-    "vue-apexcharts": "^1.5.0"
+    "vue-apexcharts": "^1.5.0",
+    "vue-datepicker-ui": "^0.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
