--- a/front/package.json
+++ b/front/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "vue": "^2.6.10",
     "vue-apexcharts": "^1.5.0",
-    "vue-datepicker-ui": "^0.1.2"
+    "vue-datepicker-ui": "^0.1.2",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
