--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "bootstrap-vue": "^2.0.2",
     "core-js": "^2.6.5",
     "cors": "^2.8.5",
+    "vee-validate": "^2.2.15",
     "vue": "^2.6.10",
     "vue-apexcharts": "^1.5.0",
     "vue-datepicker-ui": "^0.1.2",
